--- a/server/lang/l001/j001/j104/bbb/201x.md
+++ b/server/lang/l001/j001/j104/bbb/201x.md
@@ -9,8 +9,9 @@ NIO来源和主要内容：[NIO规范](https://jcp.org/en/jsr/detail?id=51)
 -   [NIO概述](250x.md)
 -   [缓冲区](220x.md)
 -   [通道](210x.md)
+-   [选择器](270x.md)
 -   [字符集](230x.md)
--   [套接字](240x.md)
+-   [套接字](240x.md)通道
 
 
 
