--- a/server/lang/l001/j001/j104/bbb/220x.md
+++ b/server/lang/l001/j001/j104/bbb/220x.md
@@ -255,25 +255,140 @@ CharBuffer charbuffer = CharBuffer.wrap (myArray);
 
 ##  复制缓冲区
 
+可以创建描述从外部存储到数组中的数据元素的缓冲区对象，也能管理其他缓冲区中的外部数据。
 
+当一个管理其他缓冲器所包含的数据元素的缓冲器被创建时，这个缓冲器被称为视图缓冲器。大多数的视图缓冲器都是 ByteBuffer 的视图。
 
+视图存储器总是通过调用已存在的存储器实例中的函数来创建。使用已存在的存储器实例中的工厂方法意味着视图对象为原始存储器的内部实现细节私有。
 
+数据元素可以直接存取，无论他们是存储在数组中还是以一些其他的方式，而不需经过原始缓冲区对象的 get()/put() API。
+
+-   Duplicate()/asReadOnlyBuffer()/slice() 创建一个与原始缓冲区相似的新缓冲区
+
+两个缓冲区共享数据元素，拥有同样的容量，但每个缓冲区拥有各自的位置，上界和标记属性。
+
+对一个缓冲区内的数据元素所做的改变会反映在另外一个缓冲区上，这一副本缓冲区具有与原始缓冲区同样的数据视图。
+
+如果原始的缓冲区为只读，或者为直接缓冲区，新的缓冲区将继承这些属性。
+
+复制一个缓冲区会创建一个新的 Buffer 对象，但并不复制数据，原始缓冲区和副本都会操作同样的数据元素。
 
 ##  字节缓冲区
 
+所有的基本数据类型都有相应的缓冲区类(布尔型除外)，但字节缓冲区有自己的独特之处。
+
+字节是操作系统及其 I/O 设备使用的基本数据类型。当在 JVM 和 操作系统间传递数据时，将其他的数据类型拆分成构成他们的字节是十分必要的。
+
 1.  字节顺序
+
+非字节类型的基本类型，除了布尔型都是由组合在一起的几个字节组成的。
+
+-   这些数据类型及其大小
+
+![20200125-203650](images/20200125-203650.png)
+
+每个基本数据类型都是以连续字节序列的形式存储在内存中。
+
+尽管字节大小已经被确定，但字节顺序问题一直没有被广泛认同。字节顺序通常取决于硬件设计，Intel 处理器使用小端字节顺序涉及，摩托摩拉的 CPU 系列、SUN 的 Sparc 工作站，以及 PowerPC 的 CPU 架构都采用大端字节顺序。
+
+多字节数值被存储在内存中的方式一般被称为 endian-ness(字节顺序)。
+
+如果数字数值的最高字节 -- big end(大端)，位于低位地址，那么系统就是大端字节顺序
+
+-   大端字节顺序
+
+![20200125-204428](images/20200125-204428.png)
+
+如果最低字节最先保存在内存中，那么小端字节顺序
+
+-   小端字节顺序
+
+![20200125-204546](images/20200125-204546.png)
+
+字节顺序的问题甚至胜过 CPU 硬件设计，当 Internet 的设计者为互联各种类型的计算机而设计网际协议(IP)时，规定了 IP协议使用大端的网络字节顺序概念。所有在IP分组报文的协议部分中使用的多字节数值必须先在本地主机字节顺序和通用的网络字节顺序之间进行转换。
+
+在 java.nio 中，字节顺序由 ByteOrder 类封装。
+
+ByteOrder 类定义了决定从缓冲区中存储或检索多字节数值时使用那一字节顺序的常量。他定义了以其本身实例预初始化的两个 public 区域。
+
+如果要知道 JVM 运行的硬件平台的固有字节顺序，调用静态类函数 nativeOrder()，他将返回两个已确定常量中的一个，调用 toString() 将返回一个不包含两个文字字符串 BIG_ENDIAN 或 LITTLE_ENDIAN 之一的 String。
+
+对于除了 ByteOrder 之外的其他缓冲区类，字节顺序是一个只读属性，并且可能根据缓冲区的建立方式而采用不同的值。
+
+除了 ByteBuffer ，其他通过分配或包装一个数组所创建的缓冲区将从 order() 返回与 ByteOrder.nativeOrder() 相同的数值。
+
+ByteBuffer 类有所不同，默认字节顺序总是 ByteBuffer.BIG_ENDIAN，无论系统的固有字节顺序是什么。
+
+Java 默认字节顺序是大端字节顺序，这允许类文件等以及串行化的对象可以在任何 JMV 中工作。
+
+ByteBuffer 对象像其他基本数据类型一样，具有大量便利的函数用于获取和存放缓冲区内容，这些函数对字节进行编码或解码的方式取决于 ByteBuffer 当前字节顺序的设定。
 
 2.  直接缓冲区
 
+字节缓冲区跟其他缓冲区类型最明显的不同在于，他们可以成为通道所执行的 I/O 的源头和或目标，并且通道也只接收 ByteBuffer 作为参数。
+
+I/O 操作是在操作系统的内存区域中进行，这些内存区域，就操作系统方面来说，是相连的字节序列，毫无疑问，只有字节缓冲区有资格参与 I/O 操作。
+
+操作系统进行 I/O 操作的内存必须是连续的字节序列，在 JVM 中，字节数组可能不会在内存中连续存储，或者无用存储单元收集可能随时对其进行移动，在 Java 中，数组是对象，而数据存储在对象中的方式在不同的 JVM 实现中都各有不同。
+
+直接缓冲区被用于与通道和固有 I/O 例程交互，他们通过使用固有代码来告知操作系统直接释放或填充内存区域，对用于通道直接或原始存取的内存区域的字节元数的存储尽了最大的努力。
+
+直接字节缓冲区通常是 I/O 操作最好的选择，在设计方面，他们支持 JVM 可用的最高效 I/O 机制。
+
+非直接字节缓冲区可以被传递给通道，但是这样可能导致性能损耗。通常非直接缓冲不可能成为一个本地 I/O 操作的目标。
+
+-   如果向一个通道传递一个非直接 ByteBuffer 对象用于写入，通道肯能会在每次调用中隐含的进行下面的操作：
+    -   创建一个临时的直接 ByteBuffer 对象
+    -   将非直接缓冲区的内容复制到临时缓冲中
+    -   使用临时缓冲区执行低层次 I/O 操作
+    -   临时缓冲区对象离开作用域，并最终成为被回收的无用数据
+
+直接缓冲区是 I/O 的最佳选择，但可能比创建非直接缓冲区要花费更高的成本。直接缓冲区使用的内存是通过调用本地操作系统方面的代码分配的，绕过了标准 JVM 堆栈。建立和销毁直接缓冲区会明显比具有堆栈的缓冲区更加破费，这取决于主操作系统以及 JVM 实现。直接缓冲区的内存区域不受垃圾回收机制管理，因为他们位于标准 JVM 堆栈之外。
+
+直接ByteBuffer是通过调用具有所需容量的ByteBuffer.allocateDirect()函数产生的，就像我们之前所涉及的allocate()函数一样。
+
 3.  视图缓冲区
+
+I/O 基本上可以归纳成字节数据的四处传递。一旦数据到达 ByteBuffer ，就需要查看以决定怎么做或者在将他发送出去之前对他进行一些操作。 ByteBuffer 类提供了丰富的 API 来创建视图缓冲区。
+
+视图缓冲区通过已存在的缓冲区对象实例的工厂方法来创建。这种视图对象维护他自己的属性、容量、位置、上界和标记，但是和原来的缓冲区共享数据。
+
+ByteBuffer 类允许创建视图来将 byte 型缓冲区字节数据映射为其他的原始数据类型。
+
+无论何时一个视图缓冲区存取一个 ByteBuffer 的基础字节，这些字节都会根据这个视图缓冲区的字节顺序设定被包装成一个数据元素。当一个视图缓冲区被创建时，视图创建的同时他也继承了基础 ByteBuffer 对象的字节顺序设定。这个视图的字节顺序不能再被修改。
 
 4.  数据元素视图
 
+ByteBuffer 类提供了一个不太重要的机制来以多字节数据类型的形式存取 byte 数据组，ByteBuffer 类为每一种原始数据类型提供了存取的和转化的方法。
+
+这些函数从当前位置开始存取 ByteBuffer 的字节数据，就好像一个数据元数被存储在那里一样，根据这个缓冲区的当前的有效的字节顺序，这些字节数据会被排成或打乱成需要的原始数据类型。
+
 5.  存取无符号数据
+
+Java 编程语言对无符号数值并没有提供直接的支持(除了 char 类型)，但是在许多情况下需要将无符号的信息转换成数据流或文件，或者包装数据来创建文件头或其他带有无符号数据区域结构化的信息。
+
+获取/存放无符号值的工具程序
 
 6.  内存映射缓冲区
 
+映射缓冲区是带有存储在文件，通过内存映射来存取数据元素的字节缓冲区。
+
+映射缓冲区通常是直接存取内存的，只能通过 FileChannel 类创建。
+
+映射缓冲区的用法和直接缓冲区类似，但是 MappedByteBuffer 对象可以处理独立于文件存取形式的许多特定字符。
 
 ##  总结
 
+-   缓冲区属性
 
+缓冲区属性描述了缓冲区的当前状态，影响了缓冲区的表现。
+
+-   创建缓冲区
+
+创建缓冲区的方式由缓冲区的使用方式和使用点决定
+
+-   字节缓冲区
+
+只有字节缓冲区能够与通道共同使用，并且字节缓冲区提供了适用于其他数据类型的视图。
+
+----
