--- a/server/lang/l001/j001/j104/books/b009/210x.md
+++ b/server/lang/l001/j001/j104/books/b009/210x.md
@@ -69,7 +69,7 @@ FileChannel fc = raf.getChannel();
 
 -   ByteChannel 接口
 
-![20200126-150807](images/20200126-150807.pngs)
+![20200126-150807](images/20200126-150807.png)
 
 通道可以是单向(实现 ReadableByteChannel 或 WritableByteChannel)的，也可能是双向(实现 ReadableByteChannel 和 WritableByteChannel)的。
 
