--- a/bbb/201912/013.md
+++ b/bbb/201912/013.md
@@ -37,7 +37,7 @@ sudo  apt-get  dist-upgrade
 ##  软件清单
 |名称|版本|描述|下载|备注|
 |----|----|----|----|----|
-|JDK|11|Java平台环境|[地址](https://www.oracle.com/technetwork/java/javase/downloads/jdk11-downloads-5066655.html)|选择OS对应版本，此版本长期支持|
+|JDK|8/11|Java平台环境|[地址](https://www.oracle.com/technetwork/java/javase/downloads/index.html)|选择OS对应版本，8是主流/[教程](https://docs.oracle.com/javase/tutorial/tutorialLearningPaths.html)/[结构](https://docs.oracle.com/javase/8/docs/)，11是长期支持|
 |Eclipse|最新版|Java开发工具|[地址](https://www.eclipse.org/downloads/packages/)|Java应用开发，官网不好下考虑[镜像](https://mirror.tuna.tsinghua.edu.cn/eclipse/technology/epp/downloads/release/)|
 |IDEA|最新版|Java开发工具|[地址](http://www.jetbrains.com/idea/)|Java应用开发|
 |STS|最新版|Java开发工具|[地址](https://spring.io/tools/sts/)|Spring应用开发，基于Eclipse，增加了一些spring插件|
@@ -45,7 +45,7 @@ sudo  apt-get  dist-upgrade
 |Ant|最新版|Java依赖包管理|[地址](http://ant.apache.org/)|tomcat编译需要|
 |Tomcat|最新版|Java Web运行环境|[地址](http://tomcat.apache.org/)|Java Servlet规范实现|
 |datagrip|最新版|多种数据库客户端|[地址](http://www.jetbrains.com/datagrip/)|Jetbrains出品|
-|CLion|最新版|开发工具|[地址](http://www.jetbrains.com/clion/)|C/C++应用开放，JVM是个C++项目|
+|CLion|最新版|开发工具|[地址](http://www.jetbrains.com/clion/)|C/C++应用开发，JVM是个C++项目|
 |[Git](002.md)|最新版|版本控制|[地址](https://git-scm.com/)|win下载下来安装，ubantu在线安装|
 |vsCode|最新版|开发工具|[地址](https://code.visualstudio.com/)|微软出品|
 
