--- a/server/lang/l001/j001/j104/outline/1401.md
+++ b/server/lang/l001/j001/j104/outline/1401.md
@@ -28,7 +28,7 @@ java. net 包描述、[Java网络概述](https://docs.oracle.com/javase/8/docs/t
     -   DatagramSocket：用于UDP通过网络发送和接收数据报包的套接字
     -   MulticastSocket：IP广播
 
-### 安全
+### 安全性
 
 安全性包括与身份验证和权限相关的类。
 
