--- a/server/lang/l001/j001/j104/books/b001/30.md
+++ b/server/lang/l001/j001/j104/books/b001/30.md
@@ -1,6 +1,80 @@
 #   读写二进制数据
 
+二进制格式传递数据比字符要高效。
 
 ##  DataInput 和 DataOutput 接口
+
+DataOutput/DataOutput 接口定义了用于以二进制格式 写/读 数组、字符、boolean 值和字符串的方法。
+
+DataInputStream 类实现了 DataInput 接口，为了从文件中读入二进制数据，可以将 DataInputStream 与某个字节源相组合，例如 FileInputStream ：
+
+```Java
+DataInputStream in = new DataInputStream(new FileInputStream("employee.dat"));
+```
+
+于此类似，要想写出二进制数据，可以使用实现了 DataOutput 接口的 DataOutputStream 类：
+
+```Java
+DataOutputStream out = new DataOutputStream(new FileOutputStream("employee.dat"));
+```
+
 ##  随机访问文件
-##  ZIP文档
+
+RandomAccessFile 类可以在文件中的任何位置查找或写入数据。磁盘文件都是随机访问的，但是与网络套接字通信的输入/输出流却不是。
+
+可以打开一个随机访问文件，只用于读入或同时用于读写，通过使用字符串 "r"(用户读入访问)或 "rw"(用于读入/写出访问)作为构造器的第二个参数来指定这个选项。
+
+```Java
+RandomAccessFile in = new RandomAccessFile("employee.dat", "r");
+RandomAccessFile inOut = new RandomAccessFile("employee.dat", "rw");
+```
+
+随机访问文件有一个表示下一个将被读入或写出的字节所处位置的文件指针， seek 方法可以用来将这个文件指针设置到文件中的任意字节位置。
+
+getFilePointer 方法将返回文件指针的当前位置。
+
+RandomAccessFile 类同时实现了 DataInput 和 DataOutput 接口。
+
+##  ZIP 文档
+
+ZIP 文档(通常)以压缩格式存储了一个或多个文件，每个 ZIP 文档都有一个头，包含诸如每个文件名称和所使用的压缩方法等信息。
+
+在Java中，可以使用 ZipInputStream 来读入 ZIP文档， getNextEntry 方法可以返回一个描述这些项的 ZipEntry 类型的对象。
+
+向ZipInputStream的 getInputStream 方法传递该项可以获取用于读取该项的输入流，然后调用 closeEntry 来读入下一项。
+
+下面时典型的通读 ZIP文件的代码序列：
+
+```Java
+ZipInputStream zin = new ZipInputStream(new FileInputStream(zipname));
+ZipEntry entry;
+while ((entry = zin.getNextEntry()) != null) {
+    InputStream in = zin.getInputStream(entry);
+    // 读取数据..
+    zin.closeEntry();
+}
+zin.close();
+```
+
+要写出到 ZIP 文件，可以使用 ZipOutputStream，对于希望放入到 ZIP 文件中的每一项，都应该创建一个 ZipEntry 对象，并将文件名传递给 ZipEntry 的构造器，他将设置其他诸如文件日期和解压缩方法等参数。
+
+下面时代码框架：
+
+```Java
+FileOutputStream fout = new FileOutputStream("test.zip");
+ZipOutputStream zout = new ZipOutputStream(fout);
+// for all file 遍历所有文件
+{
+    ZipEntry ze = new ZipEntry(filename);
+    zout.putNextEntry(ze);
+    // 发送数据到 zout
+    zout.closeEntry();
+}
+zout.close();
+```
+
+ZIP 输入流是一个能够展示流的抽象化的强大之处的实例。
+
+FileSystem 类更方便。
+
+----
