--- a/server/lang/l001/j001/j104/books/b001/40.md
+++ b/server/lang/l001/j001/j104/books/b001/40.md
@@ -1,6 +1,43 @@
 #   对象输入/输出流与序列化
 
+当需要存储相同类型的数据时，使用固定长度的记录格式是一个不错的选择，但是，在面向对象程序中创建的对象很少全部都具有相同的类型。
+
+Java语言支持一种称为 对象序列化的机制，可以将任何对象写出到输出流中，并在之后将其读回。
 
 ##  保存和加载序列化对象
 
-##  为克隆使用序列化：深拷贝
+为了保存对象数据，首先需要打开一个 ObjectOutputStream 对象：
+
+```Java
+ObjectOutputStream out = new ObjectOutputStream(new FileOutputStream("employee.dat"));
+```
+
+为了保存对象，可以直接使用 ObjectOutputStream#writeObject 方法。
+
+为了将这些对象读回，首先需要获得一个 ObjectInputStream 对象：
+
+```Java
+ObjectInputStream in = new ObjectInputStream(new FileInputStream("employee.dat"));
+```
+
+然后，用 readObject 方法以这些对象被写出时的顺序获得他们。
+
+对希望在对象输出流中存储或从对象输入流中恢复的所有类都必须实现 Serializable 接口：
+
+```Java
+class Employee implements Serializable {}
+```
+
+在文件中保存原生的内存地址毫无意义，序列化就使用序列号代替了内存地址。
+
+##  为克隆使用序列化
+
+>   深拷贝：复制一个当时对象的状态
+
+序列化机制有一种用法：即提供了一种克隆对象的简便途径，只要对应的类是可序列化即可。
+
+做法很简单：直接将对象序列化到输出流中，然后将其读回，这样产生的新对象是对现有对象的一个深拷贝。
+
+把对象状态写入字节数组流`暂存`起来。
+
+----
