--- a/server/lang/l001/j001/j104/books/b001/50.md
+++ b/server/lang/l001/j001/j104/books/b001/50.md
@@ -2,19 +2,98 @@
 
 >   关注在磁盘上如何存储文件
 
-##  Path，表示的是一个目录名序列
+输入/输出流类关心的是文件的内容，Path 和 Files 类封装了在用户机器上处理文件系统所需的所有功能。
+
+##  Path
+
+表示的是一个目录名序列，其后还可以跟着一个文件名。
+
+以根部件开始的路径是绝对路径，否则，就是相对路径。
+
+静态的 Paths.get 方法接受一个或多个字符串，并将他们用默认文件系统的路径分割符连接起来，这个连接起来的结果就是一个 Path 对象。
+
 ##  读写文件
+
+Files 类可以使得普通文件操作变得快捷。
+
+如果要处理文件长度比较大，或在是二进制文件，那么还是应该使用所熟知的输入/输出流或在读入器/写出器
+
 ##  创建文件和目录
+
+Files 类 API
+
 ##  复制、移动和删除文件
+
+Files 类 API
+
 ##  获取文件信息
+
+Files 类 API 可以检查路径的某个属性。
+
+getOwner 方法将文件的拥有者作为 java.nio.file.attribute.UserPrincipal 的一个实例返回。
+
+所有的文件系统都会报告一个基本属性集，被封装在 BasicFileAttributes 接口中。
+
+-   基本文件属性包括
+    -   创建文件、最后一次访问时间以及最后一次修改文件的时间
+    -   文件是常规文件、目录还是符号链接
+    -   文件尺寸
+    -   文件主键
+
+要获得这些属性，可以调用：
+
+```Java
+BasicFileAttributes attributes = Files.readAttributes(path, BasicFileAttributes.class);
+```
+
+如果知道用户的文件系统兼容 POSIX，可以使用：
+
+```Java
+PosixFileAttributes attributes = Files.readAttributes(path, PosixFileAttributes.class);
+```
+
+然后从中找到组拥有者，以及文件的拥有者、组和访问权限。
+
 ##  访问目录中的项
 
 >   子目录或目录数
+
+静态的 Files#list 方法会返回一个可以读取目录中各个项的 Stream<Path> 对象。目录是被惰性读取的，这使得处理具有大量项的目录可以变得更高效。
+
 
 ##  使用目录流
 
 >   过滤文件
 
+Files 类 API
+
 ##  ZIP文件系统
 
 >   遍历所有文件
+
+Paths 类会在默认文件系统中查找路径，即在用户本地磁盘中的文件，其中最有用之一是 ZIP 文件系统。
+
+如果 zipname 是某个 ZIP 文件的名字，那么下面的调用：
+
+```Java
+FileSystem fs = FileSystems.newFileSystem(Paths.get(zipname), null);
+```
+
+将建立一个文件系统，他包含 ZIP 文档中的所有文件。
+
+fs.getPath 对于任意文件系统来说，都与 Paths.get 类似。
+
+要列出 ZIP 文档中所有文件，可以遍历文件树：
+
+```Java
+FileSystem fs = FileSystems.newFileSystem(Paths.get(zipname), null);
+Files.walkFileTree(fs.getPath("/), new SimpleFileVisitor<Path>(){
+    public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
+        System.out.println(file);
+        return FileVisitResult.CONTINUE;
+    }
+});
+
+```
+
+----
