--- a/server/lang/l001/j001/j104/books/b001/20.md
+++ b/server/lang/l001/j001/j104/books/b001/20.md
@@ -1,7 +1,101 @@
 #   文本输入与输出
 
+在保存数据时，可以选择二进制格式或文本格式。例如，整数 1234 存储成二进制数时，他被写为由字节 00 00 04 D2 构成的序列(十六进制表示法)，而存储成文本格式时，他被存成了字符串 "1234"。
+
+尽管二进制格式的 I/O 高速且高效，但是不宜人来阅读。
+
+在存储文本字符串时，需要考虑字符编码方式。互联网最常用的编码方式是 UTF-8，这个字符串将写出为 4A 6F 73 C3 A9。
+
+OutputStreamWriter类将使用选定的字符编码方式，把 Unicode 码元的输出流转换为字节流，而 InputStreamReader 类将包含字节(用某种字符编码方式表示的字符)的输入流转换为可以产生 Unicode 码元的读入器。
+
+在转换为字符时需要指定编码方式。
 
 ##  如何写出文本输出
+
+对于文本输出，可以使用 PrintWriter 。这个类拥有以文本格式打印字符串和数字的方法，还有一个将 PrintWriter 链接到 FileWriter 的便捷方法，下面的语句：
+
+```Java
+PrintWriter out = new PrintWriter("employee.txt", "UTF-8");
+```
+
+等同于：
+
+```Java
+PrintWriter out = new PrintWriter(
+    new FileOutputStream("employee.txt"), "UTF-8");
+```
+
+为了输出到打印写出器，需要使用与使用 System.out 时相同的 print、println 和 printf 方法。
+
+例如，考虑下面的代码：
+
+```Java
+String name = "shenzhen";
+double gdp = 12392219.11;
+int people = 2222221;
+
+out.print(name);
+out.print(' ');
+out.print(gdp);
+out.print(' ');
+out.print(people);
+```
+
+他将把下面的字符：`shenzhen 12392219.11 2222221` 输出到写出器 out，之后这些字符将会被转换成字节并最终写入 `employee.txt` 中。
+
+如果写出器设置为自动冲刷模式，那么只要 println 被调用，缓冲区中的所有字符都会被发送到他们的目的地。
+
 ##  如何读入文本输入
+
+如果要将这个文件一行行地读入，可以调用：
+
+```Java
+List<String> lines = Files.readAllLines(path, charset);
+```
+
+如果文件太大，可以将行惰性处理为一个 Stream<String> 对象：
+
+```Java
+try (Stream<String> lines = Files.lines(path, charset)) {
+  // 。。。
+}
+```
+
 ##  以文本格式存储对象
-##  字符编码方式：字符如何编码成字节
+
+领略一个示例程序。
+
+将一个 Employee 记录数组存储成了一个文本文件，其中每条记录都保存成单独的一行，而实例字段彼此之间使用分割副分离开，这里使用竖线(|) 作为分割符。
+
+记录集的样本：
+
+```
+Carl Cracker|75000.0|1987|12|15
+Harry Hacker|50000.0|1989|10|1
+Tony Tester|40000.0|1990|3|15
+```
+
+因为时要写出到一个文本文件中，所以使用 PrintWriter 类，直接写出所有的字段，每个字段后面跟着一个 |，而最后一个字段的后面跟着一个 `\n`
+
+
+##  字符编码方式
+
+>   字符如何编码成字节
+
+输入和输出流都是基于字节序列的，但是，很多情况下，希望操作的是文本，即字符序列。
+
+Java 针对字符使用的是 Unicode 标准，每个字符或"编码点"都具有一个21位的整数。有多种不同的字符编码方式，就是说，将这些21为数字包装成字节的方式有多种。
+
+最常见的编码方式是 UTF-8，他会将每个 Unicode 编码点编码为 1 到 4 个字节的序列。
+
+StandardCharsets 类具有类型为 Charset 的静态变量，用于表示每种 JVM 都必须支持的字符编码方式。
+
+为了获得另一种编码放松的 Charset ，可以使用静态的 forName 方法：
+
+```Java
+Charset utf8 = Charset.forName("UTF-8");
+```
+
+在读入或写出文本时，应该使用 Charset 对象。
+
+----
