--- a/bbb/201912/014.md
+++ b/bbb/201912/014.md
@@ -38,12 +38,17 @@
 >   默认使用主分支：master
 -   初始化
     ```
-    某目录Github 下 
+    // 某目录Github 下 
     git clone git@… // 下载主分支。。默认会下载项目的完整历史版本
+
     // 指定分支
     //git clone -b v2.2 git@… // 下载 v2.2 分支
+
     // 指定tag
     git clone --branch [tags标签] [git地址]
+
+    // 当仅需要下载项目文件并不关心提交历史记录，可以使用浅拷贝，比较快，特别是对于开源项目
+    git clone  --depth=1 [git地址]
     ```
 -   添加到暂存区
     ```
