--- a/bbb/201912/015.md
+++ b/bbb/201912/015.md
@@ -88,8 +88,9 @@ openjdk-jdk-11-28 是解压后的原目录
 
 ##  Java框架产品
 
+安装并配置IDE JDK 1.8
 
-- MyBatis 3.5.1 源码编译
+### MyBatis 3.5.1 源码编译
 
 MyBatis 项目是一个 Maven 项目，由本身和父项目组成。
 
@@ -97,17 +98,117 @@ MyBatis 项目是一个 Maven 项目，由本身和父项目组成。
 
 然后，当做普通 Maven 项目导入即可，最好使用 IDEA。
 
-- Spring framework 4.3.24 源码编译
+### Spring framework 4.3.24 源码编译
 
-安装 JDK 1.8，网络可以观看 8M蓝光直播 最好。
+网络可以观看 8M蓝光直播 最好。
 
 进入文件夹 win/Linux 直接运行 import-into-eclipse.bat/.sh，一路下一步，记最为顺利的一次。
 
 ![2019080901](image/2019080901.png)
 
-- Tomcat  9.x
+### Tomcat  9.x
 
 [Tomcat9源代码浅析-环境搭建](https://blog.csdn.net/daiwuliang/article/details/101674451)
 
+### Netty 4.1.37  源码编译
+
+Netty 项目是个树形结构，父项目：netty-parent ，就是下载下来目录第一层的 pom.xml 
+
+使用 Eclipse 导入，选择下载下来的文件夹一次性导入，结果界面大概这样：
+
+![20200213181222](image/20200213181222.png)
+
+当然开始时会有一些异常，下面就是来解决。
+
+首先把 netty-parent/pom.xml properties --> maven.compiler.* 改成 1.8
+
+-   Maven项目POM文件错误
+
+```
+Plugin execution not covered by lifecycle configuration: org.codehaus.mojo:xml-maven-plugin:1.0.1:check-format (execution: check-style, phase: validate)
+```
+
+按照 [Maven项目POM文件错误](https://www.cnblogs.com/AmilyLin/p/amilyLin.html) 解决。
+
+![20200213181805](image/20200213181805.png)
+
+lifecycle-mapping-metadata.xml 一般是不在上图文件夹下，可以从 ..\eclipse\plugins\org.eclipse.m2e.lifecyclemapping.defaults_xxxxxx.jar  文件里复制过去(拷贝该jar包出去解压就有了)
+
+然后根据错误提示的插件进行修改
+
+``` xml
+	<pluginExecution>
+      <pluginExecutionFilter>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>xml-maven-plugin</artifactId>
+        <versionRange>[1.0.1,)</versionRange>
+        <goals>
+          <goal>testCompile</goal>
+          <goal>check-format</goal>
+        </goals>
+      </pluginExecutionFilter>
+      <action>
+        <ignore/>
+      </action>
+    </pluginExecution>
+	
+	<pluginExecution>
+      <pluginExecutionFilter>
+        <groupId>org.codehaus.gmaven</groupId>
+        <artifactId>groovy-maven-plugin</artifactId>
+        <versionRange>[2.0,)</versionRange>
+        <goals>
+          <goal>testCompile</goal>
+          <goal>execute</goal>
+        </goals>
+      </pluginExecutionFilter>
+      <action>
+        <ignore/>
+      </action>
+    </pluginExecution>
+```
+
+![20200213182358](image/20200213182358.png)
+
+kaoshanji/neety(kaoshanji-4.1) 下 lifecycle-mapping-metadata.xml
+
+-   io.netty:netty-tcnative 没有
+
+按照 [从github检出netty项目，编译遇到问题总结](https://www.iteye.com/blog/donald-draper-2382829) 解决
+
+把 netty-parent/pom.xml 里 properties --> tcnative.classifier 注释掉
+
+```xml
+    <tcnative.version>2.0.25.Final</tcnative.version>
+    <!-- <tcnative.classifier>${os.detected.classifier}</tcnative.classifier> -->
+```
+
+一些子项目的 pom.xml 在 下面节点处提示错误就改成这样：
+
+``` xml
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>${tcnative.artifactId}</artifactId>
+      <!-- <classifier>${tcnative.classifier}</classifier> -->
+      <version>${tcnative.version}</version>
+      <scope>test</scope>
+    </dependency>
+```
+
+-   io.netty.util.collection.IntObjectHashMap 类没有
+
+类似的是 xxxxObjectHashMap 没有，可能在多个地方提示
+
+按照 [Netty 分享之动态生成重复性的代码](https://www.jianshu.com/p/9160684f134b) 解决
+
+用命令行进入 common 项目文件夹，执行
+
+```base
+mvn clean && mvn package -Dcheckstyle.skip=true
+```
+
+再刷新项目，嗯，就有了。。
+
+-   测试类里 assertEquals 
 
 
