--- a/bbb/201912/018.md
+++ b/bbb/201912/018.md
@@ -1,6 +1,4 @@
-# 源码
-
->   记录读源码过程
+#   对框架源码阅读的一点认识
 
 读源码的一点理解，看别人的东西还是需要思考一下。
 
@@ -26,11 +24,6 @@
 - 列表
 - 角度：如果让你实现上述框架，你该怎么做？
 - 控制源码
-
-##  列表
--   [mybatis 3.5.1](mybatis_source_3.5.1/README.md)
--   [spring framework 4.3.24](spring_framework_source_4.3.24/README.md)
--   [apache tomcat 9](apache_tomcat_source_9/README.md)
 
 
 ##  角度
@@ -58,3 +51,4 @@
 5.  整体结构：架构结构，代码从何写起，模块怎么划分，接口、类和方法的组织定义，可能有哪些扩展
 
 ----
+
