Java IO网络模板代码

--- a/bbb/201912/013.md
+++ b/bbb/201912/013.md
@@ -45,6 +45,7 @@ sudo  apt-get  dist-upgrade
 |STS|最新版|Java开发工具|[地址](https://spring.io/tools/sts/)|Spring应用开发，基于Eclipse，增加了一些spring插件|
 |Maven|最新版|Java依赖包管理|[地址](https://maven.apache.org/)|第三方包管理，部署打包|
 |Ant|最新版|Java依赖包管理|[地址](http://ant.apache.org/)|tomcat编译需要|
+|Gradle|spring使用的版本|Java依赖包管理|[地址](https://services.gradle.org/distributions/)|spring framework编译需要|
 |Tomcat|最新版|Java Web运行环境|[地址](http://tomcat.apache.org/)|Java Servlet规范实现|
 |datagrip|最新版|多种数据库客户端|[地址](http://www.jetbrains.com/datagrip/)|Jetbrains出品|
 |CLion|最新版|开发工具|[地址](http://www.jetbrains.com/clion/)|C/C++应用开发，JVM是个C++项目|
@@ -111,6 +112,34 @@ sudo su     //需要切换到 root 用户下
 source /etc/profile
 ```
 
+### Mac
+```
+// JDK 安装：下载完成后点击安装包，按提示即可完成安装
+// 当前用户空间下打开 终端
+// 第一次配置环境： touch .bash_profile
+// 已存在的配置文件： open -e .bash_profile
+
+JAVA_HOME=/Library/Java/JavaVirtualMachines/jdk1.8.0_151.jdk/Contents/Home
+PATH=$JAVA_HOME/bin:$PATH:.
+CLASSPATH=$JAVA_HOME/lib/tools.jar:$JAVA_HOME/lib/dt.jar:.
+export JAVA_HOME
+export PATH
+export CLASSPATH
+
+ANT_HOME=/Users/kaoshanji/Desktop/App/start/Ant/apache-ant-1.10.7
+export PATH=$ANT_HOME/bin:$PATH
+
+GRADLE_HOME=/Users/kaoshanji/Desktop/App/start/Gradle/gradle-5.4.1
+GRADLE_USER_HOME=/Users/kaoshanji/Desktop/App/start/Gradle/repository
+export PATH=$GRADLE_HOME/bin:$PATH
+
+// 刷新一下
+source .bash_profile
+
+```
+
+
+
 ### 验证
 
 命令窗口
@@ -121,9 +150,11 @@ ant  -version
 
 mvn  --version
 
+gradle -version
+
 ```
 
--   maven中央仓库
+-   maven 中央仓库
     -   打开`apache-maven-3.3.9\conf`目录，编辑`settings.xml`
     ```
     // 设置jar包路径
@@ -139,6 +170,33 @@ mvn  --version
         </mirror>
     </mirrors>
     ```
+
+-   gradle 中央仓库
+    -   ../Gradle/gradle-5.4.1/init.d
+    -   新建文件 init.gradle
+
+```
+allprojects{
+    repositories {
+        def REPOSITORY_URL = 'http://maven.aliyun.com/nexus/content/groups/public/'
+        all { ArtifactRepository repo ->
+            if(repo instanceof MavenArtifactRepository){
+                def url = repo.url.toString()
+                if (url.startsWith('https://repo1.maven.org/maven2') || url.startsWith('https://jcenter.bintray.com/')) {
+                    project.logger.lifecycle "Repository ${repo.url} replaced by $REPOSITORY_URL."
+                    remove repo
+                }
+            }
+        }
+        maven {
+            url REPOSITORY_URL
+        }
+    }
+}
+
+```
+
+
 
 ##  HelloWord
 
