--- a/bbb/201912/015.md
+++ b/bbb/201912/015.md
@@ -104,6 +104,18 @@ MyBatis 项目是一个 Maven 项目，由本身和父项目组成。
 
 网络可以观看 8M蓝光直播 最好。
 
+配置 gradle-2.14.1
+
+speing 目录下 build.gradle
+
+```
+// 配置 阿里云仓库
+	repositories {
+		maven { url "https://repo.spring.io/plugins-release" }
+		maven { url "http://maven.aliyun.com/nexus/content/groups/public/"}
+	}
+```
+
 进入文件夹 win/Linux 直接运行 import-into-eclipse.bat/.sh，一路下一步，记最为顺利的一次。
 
 ![2019080901](image/2019080901.png)
