--- a/server/lang/l001/j001/j104/outline/140x.md
+++ b/server/lang/l001/j001/j104/outline/140x.md
@@ -14,3 +14,14 @@
 ##  目录
 -   [API 概述](1401.md)
 -   [API思维导图](https://www.processon.com/view/link/5e3c192ce4b0a3daae7e7bd3)
+
+##  主要内容
+-   [网络协议栈基本知识](https://www.cnblogs.com/mrlayfolk/p/11965347.html)
+
+
+----
+
+
+##  相关框架
+-   [HttpComponents](http://hc.apache.org/)
+-   [okhttp](https://square.github.io/okhttp/)
