从官方文档API开始

--- a/server/lang/l001/j001/j104/bbb/220x.md
+++ b/server/lang/l001/j001/j104/bbb/220x.md
@@ -39,7 +39,7 @@ serverChannel.configureBlocking(false);
 serverChannel.socket().bind(new InetSocketAddress(port), 1024);
 ```
 
-3.  注册复用器，并制定连接事件
+3.  注册复用器，并指定连接事件
 
 ```Java
 // 注册复用器，指定接收 连接事件
