--- a/server/program/io/010.md
+++ b/server/program/io/010.md
@@ -1,8 +1,12 @@
 # 对 UNIX 网络编程 I/O 模型一点认识
 
-人与人之间的对话、社交软件、电子邮件、手机电话/短信等等，都是一种通信方式，分别应用在不同的场景之下。
+可以把 I/O 当做通信来理解，因为 I/O 是在计算机里面解决通信的方法，关键是通信。
 
-I/O 是人机及机器之间交互的过程，是用来解决通信的问题，有了通信就可以关联在一起，进而组成更大的组织。
+如果能理解操作系统概念以及计算机网络概念，就更容易感受到 I/O 的意义。
+
+I/O 是人机及机器之间交互的过程，有了通信就可以关联在一起，进而组成更大的组织。
+
+人与人之间的对话、社交软件、电子邮件、手机电话/短信等等，都是一种通信方式，分别应用在不同的场景之下。
 
 Linux 的内核将所有外部设备都看做一个文件来操作，对一个文件的读写操作会调用内核提供的系统命令，返回一个 file descriptor(fc，文件描述符)。而对一个 socket 的读写也会有相应的描述符，称为 socketfd(socket描述符)，描述符就是一个数字，它指向内核中的一个结构体(文件路径，数据区等一些属性).
 
