--- a/bbb/201912/015.md
+++ b/bbb/201912/015.md
@@ -24,6 +24,12 @@
 
 ![20191210-222234](image/20191210-222234.png)
 
+- Eclipse
+
+类继承、方法调用
+
+![20200308-113359](image/20200308-113359.png)
+
 ----
 
 ##  编译 openJDK 11
