--- a/server/lang/l001/j001/j105/bbb/103x.md
+++ b/server/lang/l001/j001/j105/bbb/103x.md
@@ -1,5 +1,7 @@
 #   解决方案
 
+并发系统可以采用多种并发编程模型来实现，并发模型指定了系统中的线程如何通过协作来完成分配给它们的作业。
+
 Java 解决并发问题是原生支持多线程模型，基于共享内存实现通信，线程由操作系统调度使用CPU。
 
 Java 借助第三方类库可以实现其他并发模型，如，借助 [Akka库](https://akka.io/) 实现 actor模型，借助 [Multiverse库](https://github.com/pveentjer/Multiverse) 实现STM模型。
