--- a/server/lang/l001/j001/j105/bbb/104x.md
+++ b/server/lang/l001/j001/j105/bbb/104x.md
@@ -4,19 +4,28 @@
 
 并发实用程序包为高性能线程实用程序（例如线程池和阻塞队列）提供了功能强大的可扩展框架。该软件包使程序员无需手工制作这些实用程序，这与集合框架对数据结构的处理方式几乎相同。此外，这些软件包为高级并发编程提供了低级原语。
 
+----
+
 ##  [API规范](https://docs.oracle.com/javase/8/docs/technotes/guides/concurrency/index.html)
--   [java.util.concurrent](111x.md)：并发编程有用工具类
--   [java.util.concurrent.atomic](112x.md)：一个小的类工具包，支持对单个变量进行无锁线程安全编程
--   [java.util.concurrent.locks](113x.md)：提供了用于锁定和等待条件的框架，这些条件不同于内置的同步和监视器
+-   [java.util.concurrent](411x.md)：并发编程有用工具类
+-   [java.util.concurrent.atomic](412x.md)：一个小的类工具包，支持对单个变量进行无锁线程安全编程
+-   [java.util.concurrent.locks](413x.md)：提供了用于锁定和等待条件的框架，这些条件不同于内置的同步和监视器
 -   [JSR 166-并发实用程序](https://jcp.org/en/jsr/detail?id=166)
 -   Doug Lea撰写的 Java并发编程：设计原理和模式（第二版）：领先专家的综合著作，他也是Java平台的并发框架的架构师
 -   [Java Fork / Join框架](http://gee.cs.oswego.edu/dl/papers/fj.pdf)
 -   [Java Concurrent Animated](https://sourceforge.net/projects/javaconcurrenta/)：显示并发功能用法的动画
 
+----
+
 ##  文档
 
--   [官方：](https://docs.oracle.com/javase/8/docs/technotes/guides/concurrency/overview.html)[并发使用工具概述](110x.md)
+-   [官方：](https://docs.oracle.com/javase/8/docs/technotes/guides/concurrency/overview.html)[并发使用工具概述](410x.md)
+-   [API 变更](414x.md)：概述了形成当前API的简要过程和主要内容
+
+现有的API都是经过多个版本的变更而增加出来，看起来杂乱无章，毫无头绪，都不知道有那些东西，熟悉掌握起来有一定难度，形成现在局面的原因在过去，所以，从过去寻找答案，他会告诉你怎么演变成现在这样。
+-   [设计实现-`导图`](https://www.processon.com/view/link/5e69d4f1e4b0ee15dc03f24d)
+-   [API 组织-`导图`](https://www.processon.com/view/link/5e69d493e4b055496ae486c7)
 
 
-
+----
 
