--- a/server/lang/l001/j001/j105/bbb/103x.md
+++ b/server/lang/l001/j001/j105/bbb/103x.md
@@ -10,6 +10,9 @@ Java 借助第三方类库可以实现其他并发模型，如，借助 [Akka库
 
 ##  多线程模型
 
+-   Java 并发相关JCP
+    -   [Java内存模型](https://jcp.org/en/jsr/detail?id=133)
+    -   [并发实用程序](https://jcp.org/en/jsr/detail?id=166)
 -   主要解决三个问题
     -   分工：如何高效地拆解任务并分配给线程
     -   同步：线程之间如何协作
